# rondo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  cliff.toml  clippy.toml  deny.toml  mise.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  ci.yml  release.yml
deploy/: README.md
deploy/grafana/: rondo-scale-dashboard.json  rondo-vmm-dashboard.json
deploy/k8s/: grafana-dashboard.yaml  grafana-scale-dashboard.yaml  rondo-dashboard-configmap.yaml  rondo-scale-dashboard-configmap.yaml
docs/: BENCHMARK_PLAN.md  IMPLEMENTATION.md  MVP-ALT.md  MVP.md  REPO_SETUP.md  VISION.md  architecture.md  benchmarks.md  storage-format.md
rondo/: Cargo.toml
rondo-cli/: Cargo.toml
rondo-cli/src/: main.rs
rondo-demo-vmm/: Cargo.toml
rondo-demo-vmm/guest/: build.sh  init  kernel-config.sh  workload.sh
rondo-demo-vmm/src/: api.rs  main.rs  metrics.rs  vcpu.rs  vmm.rs
rondo-demo-vmm/src/devices/: block.rs  mod.rs
rondo/benches/: record.rs
rondo/examples/: benchmark_comparison.rs  consolidation_demo.rs  ephemeral_vm_benchmark.rs  series_registration.rs
rondo/src/: consolidate.rs  error.rs  export.rs  lib.rs  query.rs  remote_write.rs  ring.rs  schema.rs  series.rs  slab.rs  store.rs
rondo/tests/: integration_consolidation.rs  integration_query.rs  integration_series.rs  integration_store.rs
scripts/: benchmark_scale.sh
src/: lib.rs
