[package]
name = "rondo-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for rondo"
license = "MIT OR Apache-2.0"
repository = "https://github.com/donaldgifford/rondo/rondo-cli"
keywords = ["time-series", "metrics", "embedded", "round-robin", "monitoring"]
categories = ["database", "embedded"]

[dependencies]

[lints]
workspace = true
