[package]
name = "rondo-demo-vmm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal demo VMM with embedded rondo metrics"

[dependencies]
rondo = { path = "../rondo", version = "0.0.1", features = ["prometheus-remote-write"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# Linux-only KVM dependencies
# Pin vm-memory to 0.15 for compatibility with linux-loader 0.12
[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.19"
kvm-bindings = { version = "0.10", features = ["fam-wrappers"] }
vm-memory = { version = "0.15", features = ["backend-mmap"] }
linux-loader = { version = "0.12", features = ["bzimage", "elf"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
