[package]
name = "rondo"
version = "0.0.1"
edition = "2024"
description = "Embedded round-robin time-series storage engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/donaldgifford/rondo"
keywords = ["time-series", "metrics", "embedded", "round-robin", "monitoring"]
categories = ["database", "embedded"]


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
